# ecs

./: Cargo.toml  README.md  clippy.toml  rustfmt.toml
benches/: benchmarks.rs
examples/: cubes.rs  profiling.rs
src/: component.rs  ecs.rs  entity.rs  error.rs  lib.rs  resource.rs  vec.rs  world.rs
