[package]
name = "ecs"
version = "0.1.0"
edition = "2021"
description = "An entity component system data structure"
license = "MIT"
repository = "https://github.com/matthewjberger/ecs"
keywords = ["simulation"]
categories = ["simulation"]
readme = "README.md"

[dependencies]

[dev-dependencies]
anyhow = "1.0.68"
kiss3d = "0.35.0"
nalgebra = "0.30.1"
rand = "0.8.5"